# AEDS-I

./: .gitignore
Binary-AVL-Huffman/: CMakeLists.txt  README.MD
Binary-AVL-Huffman/src/: AVL.cpp  AVL.h  bynaryTree.cpp  bynaryTree.h  fileOperator.cpp  fileOperator.h  heap.cpp  heap.h  huffman.cpp  huffman.h  main.cpp
Caminho Guloso/: Makefile  README.md  matrizes.txt
Caminho Guloso/src/: main.cpp  matrix.cpp  matrix.hpp  matrizes.txt
Caminho-Guloso/: README.MD
Caminho-Guloso/dataset/: input.data
Caminho-Guloso/src/: auxiliary.cpp  auxiliary.h  file.cpp  file.h  joystick.cpp  joystick.h  main.cpp
DFS-e-BFS/: README.md
DFS-e-BFS/dataset/: rand.data
Labirinto Recorrente/: 1.txt  2.txt  3.txt  README.md  matrizes.txt
Labirinto Recorrente/src/: main  main.cpp
Labirinto_Recorrente/: README.MD
Labirinto_Recorrente/dataset/: input.data
Labirinto_Recorrente/src/: Boy.cpp  Boy.h  Maze.cpp  Maze.h  main.cpp
Tfinal/src/: bfs.cpp  bfs.h  dfs.cpp  dfs.h  main.cpp
TopKElementos/: Makefile  README.MD
TopKElementos/dataset/: stopwords.txt
TopKElementos/src/: fileOperator.cpp  fileOperator.h  heap.cpp  heap.h  main.cpp
template/src/: main.cpp
